--- a/Makefile.linux
+++ b/Makefile.linux
@@ -3,9 +3,11 @@ CXX = g++
 
 #Include directories (for headers): standard include dirs in /usr and /usr/local, and our helper directory.
 INCLUDEDIR = -I/usr/include/ -I/usr/local/include/ -Isrc/helpers/
-
-#Libraries needed: OpenGL, GLEW and glfw3. glfw3 requires Cocoa, IOKit and CoreVideo.
-LIBS =  -framework OpenGL -lGLEW -lglfw3 -framework Cocoa -framework IOKit -framework CoreVideo
+#Library directory (just in case)
+#You might have to symlink libGLEW in your standard libdir for use at runtime
+LIBDIR = -L/usr/local/lib
+#Libraries needed: OpenGL, GLEW and glfw3. GLEW requires GLU, glfw3 require X11, Xi, and so on...
+LIBS = -lGLEW -lglfw3 -lGL -lGLU -lX11 -lXi -lXrandr -lXxf86vm -lXinerama -lXcursor -lrt -lm -pthread -ldl
 
 #Compiler flags: C++11 standard, and display 'all' warnings.
 CXXFLAGS = -std=c++11 -Wall
@@ -39,7 +41,7 @@ all: dirs $(EXECNAME)
 #Linking phase: combine all objects files to generate the executable
 $(EXECNAME): $(OBJECTS)
 	@echo "Linking $(EXECNAME)..."
-	@$(CXX) $(OBJECTS) $(LIBS) -o $(BUILDDIR)/$(EXECNAME)
+	@$(CXX) $(LIBDIR) $(OBJECTS) $(LIBS) -o $(BUILDDIR)/$(EXECNAME)
 	@echo "Done!"
 
 #Compiling phase: generate the object files from the source files
@@ -59,4 +61,6 @@ dirs:
 .PHONY: clean
 clean :
 	rm -r $(BUILDDIR)
+
+
 
