--- a/MIDIVisualizer.vcxproj
+++ b/MIDIVisualizer.vcxproj
@@ -123,7 +123,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opengl32.lib;glfw3.lib;comctl32.lib;nfd.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>src\libs\nfd\lib-win-vc2017\;src\libs\glfw\lib-win-vc2015\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>src\libs\nfd\lib-win-vc2017\;src\libs\glfw\lib-win-x86\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -141,7 +141,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opengl32.lib;glfw3.lib;comctl32.lib;nfd.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>src\libs\nfd\lib-win-vc2017-64\;src\libs\glfw\lib-win-vc2015-64\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>src\libs\nfd\lib-win-vc2017-64\;src\libs\glfw\lib-win-x64\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
