Cleanup Background and Scene.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,8 +90,8 @@ set(Sources
 	"src/midi/MIDITrack.h"
 	"src/midi/MIDIUtils.cpp"
 	"src/midi/MIDIUtils.h"
-	"src/rendering/Background.cpp"
-	"src/rendering/Background.h"
+	"src/rendering/Score.cpp"
+	"src/rendering/Score.h"
 	"src/rendering/Framebuffer.cpp"
 	"src/rendering/Framebuffer.h"
 	"src/rendering/MIDIScene.cpp"
