Recording: one image per frame.
Display progress in real-time.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,8 @@ set(Sources
 	"src/helpers/ProgramUtilities.h"
 	"src/helpers/ResourcesManager.cpp"
 	"src/helpers/ResourcesManager.h"
+	"src/helpers/Recorder.cpp"
+	"src/helpers/Recorder.h"
 	"src/midi/MIDIFile.cpp"
 	"src/midi/MIDIFile.h"
 	"src/midi/MIDITrack.cpp"
