CMake: use Cmake for macOS app packaging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,3 +147,9 @@ endif()
 if(WIN32)
 	target_sources(MIDIVisualizer PRIVATE resources/icon/MIDIVisualizer.rc)
 endif()
+
+if(APPLE)
+	target_sources(MIDIVisualizer PRIVATE resources/icon/MIDIVisualizer.icns)
+	set_target_properties(MIDIVisualizer PROPERTIES MACOSX_BUNDLE TRUE)
+	set_source_files_properties(resources/icon/MIDIVisualizer.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+endif()
