MIDISceneFile: file specific scene.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,8 +109,10 @@ set(Sources
 	"src/rendering/Score.h"
 	"src/rendering/Framebuffer.cpp"
 	"src/rendering/Framebuffer.h"
-	"src/rendering/MIDIScene.cpp"
-	"src/rendering/MIDIScene.h"
+	"src/rendering/scene/MIDIScene.cpp"
+	"src/rendering/scene/MIDIScene.h"
+	"src/rendering/scene/MIDISceneFile.cpp"
+	"src/rendering/scene/MIDISceneFile.h"
 	"src/rendering/Renderer.cpp"
 	"src/rendering/Renderer.h"
 	"src/rendering/ScreenQuad.cpp"
