--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,13 @@ jobs:
             cmake-opts: -D CMAKE_C_COMPILER=gcc-9 -D CMAKE_CXX_COMPILER=g++-9
             artifact_name: build/MIDIVisualizer
             asset_name: MIDIVisualizer-ubuntu.zip
-            ffmpeg-archive: ffmpeg-linux-64-static-lgpl.zip
-          - os: windows-latest
+            ffmpeg-archive: ffmpeg-ubuntu20-64-static-lgpl.zip
+          - os: windows-2019
             cmake-opts: -A x64
             artifact_name: build/Release/MIDIVisualizer.exe
             asset_name: MIDIVisualizer-windows-64bits.zip
             ffmpeg-archive: ffmpeg-windows-64-static-lgpl.zip
-          - os: macOS-latest
+          - os: macos-10.15
             cmake-opts: 
             artifact_name: build/MIDIVisualizer.app
             asset_name: MIDIVisualizer-macos.zip
@@ -38,7 +38,7 @@ jobs:
         run: sudo apt-get update -y && sudo apt-get install -yq xorg-dev libgtk-3-dev
 
       - name: Dependencies-macos
-        if: startsWith(matrix.os, 'macOS')
+        if: startsWith(matrix.os, 'macos')
         shell: bash
         run: brew install wget
 
@@ -75,7 +75,7 @@ jobs:
         run: sh $GITHUB_WORKSPACE/libs/package-ubuntu.sh ${{runner.workspace}}/${{matrix.artifact_name}} $GITHUB_WORKSPACE ${{runner.workspace}}/release.zip
 
       - name: Package-macos
-        if: startsWith(matrix.os, 'macOS')
+        if: startsWith(matrix.os, 'macos')
         working-directory: ${{runner.workspace}}
         shell: bash
         run: sh $GITHUB_WORKSPACE/libs/package-macos.sh ${{runner.workspace}}/${{matrix.artifact_name}} $GITHUB_WORKSPACE ${{runner.workspace}}/release.zip
