GUI: use sr_gui instead of nfd for file/directory picking.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
 add_subdirectory(libs/glfw/)
 
-# Add NativeFileDialog
-add_subdirectory(libs/nfd/)
+# Add sr_gui
+add_subdirectory(libs/sr_gui/)
 
 # Add libremidi
 set(LIBREMIDI_HEADER_ONLY OFF CACHE BOOL "" FORCE)
@@ -149,7 +149,7 @@ source_group(TREE ${PROJECT_SOURCE_DIR}/resources FILES ${Shaders})
 add_executable(MIDIVisualizer ${LibSources} ${Sources} ${Shaders})
 
 target_include_directories(MIDIVisualizer PRIVATE src/libs/ src/helpers/)
-target_link_libraries(MIDIVisualizer PRIVATE nfd glfw libremidi ${GLFW_LIBRARIES} ${OPENGL_gl_LIBRARY})
+target_link_libraries(MIDIVisualizer PRIVATE sr_gui glfw libremidi ${GLFW_LIBRARIES} ${OPENGL_gl_LIBRARY})
 add_dependencies(MIDIVisualizer Packaging)
 
 # Add dependency to FFmpeg if available.
