Linux: fix freeze when closing dialogs, support 'open containing directory'.

--- a/libs/sr_gui/CMakeLists.txt
+++ b/libs/sr_gui/CMakeLists.txt
@@ -26,5 +26,5 @@ elseif(APPLE)
 elseif(UNIX AND NOT APPLE)
 	target_include_directories(sr_gui PRIVATE ${GTK3_INCLUDE_DIRS})
 	target_link_libraries(sr_gui PRIVATE ${GTK3_LIBRARIES})
-	target_link_libraries(sr_gui PRIVATE libnotify)
+	target_link_libraries(sr_gui PRIVATE notify)
 endif()
