CI: update dependencies on Ubuntu.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Dependencies
         if: startsWith(matrix.os, 'ubuntu')
         shell: bash
-        run: sudo apt-get update -y && sudo apt-get install -yq xorg-dev libgtk-3-dev libasound2-dev
+        run: sudo apt-get update -y && sudo apt-get install -yq xorg-dev libgtk-3-dev libasound2-dev libnotify-dev
 
       - name: Configure
         shell: bash
